# goto_ml

./: README.md  goto_ml.pt  pyproject.toml
examples/: ag_news.py  iris.py
goto_ml/: goto_ml.py  test_data.csv  training_data.csv
